--- a/technical_report.qmd
+++ b/technical_report.qmd
@@ -7,20 +7,29 @@ description: "Project summary, methodology, and findings placeholder"
 
 `_TODO: Provide a concise overview of the project objectives, key findings, and actionable recommendations._`
 Project Objectives: 
+identify the best movies or hiest revinue movies 
 
 Key Findings:
+none of the analasises done show anyting statisticly significant when put in refrenc to the Questins though there are some small difrences in move revinue depending on the season and other facters.
 
 Actionable Recommendations:
+Becaus there are no significant facters more analasis is highly advised. we segjest seporating data (seporating it in to season movie type and other difrences) more for deaper analasisi this would hopefully reduce the vareation. the other idea for beter analasis is to identify the high earning revinue movies and find what they have in common and use that to see what could influence revinue.
+the analasis did not show any statisticly significant data but some actions that might indicate a quality movie or improve revinue are
+1)
+2)
+3)
 
 ## Project Context
 
 `_TODO: Describe the motivation, stakeholders, and success criteria for this analysis._`
 Motivation:
-
-Stakeholders:
+we want to know what movies have the hiest revinue and see what could help maximise the revinue of a movie. all this with the belife that revinue for movies is an indicater of how good a movie is. 
 
 Success Criteria:
+the goal is to identify the best indicaters of a movie and ether use them to maxamise revinue or identify the best movies from them.
 
+Stakeholders:
+this project has 2 intorested partys. one is indeviduals who want to enjoy a good movie and not pay for low quality entertainment, and the secnd is companies who want to maxamise the amount of revinue they earn with as little loss as posable.
 
 ## Data Sources
 
@@ -123,7 +132,7 @@ Limitations:
 the catigorical and numarical analasis for coralation cant show causeation so we dont know if ajusting one will directly influence the other. whats more is that none of the resolts shown significance, this means that the vareance of revinue in any of our analasises is not difrent form the avrage mean.
 
 Open Questions:
-
+1) if you seporate things further
 
 Future Experiments:
 inorder to reduce the amount of vareance it would be smart to seporte data more an exsample might be only action movies in winter compared to adventuer movies in winter. this would hopefully reduec the vareance and creat a more acurate analsis aswll as show any influence between vareables for exsample if R movies earning less revinue because most of them where relesed in winter. an analasis of movie ratings for these movies would also be informative as to what watchers value and there for what you could charge more for.
