--- a/technical_report.qmd
+++ b/technical_report.qmd
@@ -90,35 +90,47 @@ this project has 2 intorested partys. one is indeviduals who want to enjoy a goo
 *Main Metrics*:
 The main metrics for the plots and data of importance are as follows:
     General Movie Revenue:
-        mean = 9.1 e^7 [**Attach unit to numbers like these Ex: 9.1 M dollars**]
-        sd = 1. e^8  [Since this sd shows that the data is skewed, add the median]
+        mean = 9.1$ e^7 (91 million us daller)
+        sd = 1. e^8 (100 million us daller) [Since this sd shows that the data is skewed, add the median]
     Season of Release:
         spring has the highest revenue (there isn't a significant difference between any except for summer and fall summer is better (0.011))
-        fall:   mean =  5.5 e^7,    sd = 7.17 e^7
-        winter: mean =  7.9 e^7,    sd = 7.62 e^7
-        spring: mean =  9.3 e^8,    sd = 1.3 e^8
-        summer: mean =  1.493 e^8,  sd = 1.8 e^8
+        fall:   mean =  5.5 e^7 (55 million us daller),    
+                sd = 7.17 e^7   (71 million us daller)
+        winter: mean =  7.9 e^7 (79 million us daller),    
+                sd = 7.62 e^7   (76 million us daller)
+        spring: mean =  9.3 e^8,(930 million us daller)
+                sd = 1.3 e^8    (103 million us daller)
+        summer: mean =  1.493 e^8, (149 million us daller) 
+                sd = 1.8 e^8    (180 million us daller)
 
     Genre:
         the highest means are in 'Musicals', 'Action', 'Adventure' with means and sd of
-        Musicals: mean = 1.6 e^8 ,sd = 1.8 e^8
-        Action:   mean = 1.9 e^8 ,sd = 2.18 e^8
-        Adventure:mean = 1.88 e^8,sd = 1.78 e^8
+        Musicals: mean = 1.6 e^8 (160 million us daller),
+                    sd = 1.8 e^8 (180 million us daller)
+        Action:   mean = 1.9 e^8 (190 million us daller),
+                    sd = 2.18 e^8 (218 million us daller)
+        Adventure:mean = 1.88 e^8 (188 million us daller),
+                    sd = 1.78 e^8 (178 million us daller)
 
     Movie Rating:
-        PG: mean = 1.2 e^8 ,sd = 1.5 e^8
-        R: mean = 5.5 e^7  ,sd = 6.4 e^7
+        PG: mean = 1.2 e^8 (120 million us daller),
+            sd = 1.5 e^8 (150 million us daller)
+        R: mean = 5.5 e^7 (55 million us daller),
+            sd = 6.4 e^7 (64 million us daller)
 
     Production Method:
-        Animation/ Live Actin: mean = 1.58 e^8 ,sd = 1.68 e^8
-        Digital Animation:     mean = 2.1 e^8  ,sd = 1.7 e^8
+        Animation/ Live Actin: mean = 1.58 e^8 (158 million us daller),
+                                sd = 1.68 e^8 (168 million us daller)
+        Digital Animation:     mean = 2.1 e^8 (210 million us daller),
+                                sd = 1.7 e^8 (170 million us daller)
 
 *Charts*: (Add description underneath it if chart doesn't include labels)
+()
 MSE
 Cross Validation 
 Variable and Prepositions Plot
 
-*Model Diagnostics*: We chose not to createa prediciton model, and thus have no model diagnostics. 
+*Model Diagnostics*: We chose not to createa prediciton model because no statisticly significant vareables where identified, and thus have no model diagnostics. 
 (Could do t-test or ANOVA if wanted for model diagnostics) (Could include significance stats here.)
 
 
@@ -126,12 +138,16 @@ Variable and Prepositions Plot
 
 `_TODO: Interpret the results, note limitations, and capture open questions or future experiments._`
 *Results*:
+there where no stiatisticly significant vareables becasue the vareance was so high. there are some facters that apear to have some influece such as season of releas, genre, and rating (R, PG, G) but futher analais could revieal more influence if vareance was reduced
 
 *Limitations*:
 The categorical and numerical analysis for correlation can't show causation so we don't know if adjusting one will directly influence the other. Additionally, none of the results shown significance, this means that the variance of revenue in any of our analyses is not different form the average mean.
 
 Open Questions:
-1) if you seporate things further
+1. if you seporate things further (year of production, season of production, geanre, etc.) douse it tell a more clear story about the data
+2. are move rating actualy related to the revinue earned for that movie.
+3. are there other factors that influence revinue? storyline, plot twists, etc.
+4. do outliers (high or low revinue movies) have common faters?
 
 *Future Experiments*:
 In order to reduce the amount of variance it would be smart to separate data more, an example might be only action movies in winter compared to adventure movies in winter. This would hopefully reduce the variance and create a more accurate analysis as well as show any influence between variables, for example if R movies earning less revenue because most of them were released in winter. An analysis of movie ratings for these movies would also be informative as to what watchers value and there for what you could charge more for.
